# misis2024f-24-01-vigalok-v-v

./: .gitignore  CMakeLists.txt  README.md  codeforces.id  status.md
complex_number/: CMakeLists.txt
complex_number/src/: complex.cpp  complex.h  main.cpp
prj.codeforces/: 0004a.cpp  CMakeLists.txt
prj.lab/arrayt/: arrayt.hpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.hpp  main.cpp  test.h
prj.lab/queuel/: main.cpp  queuel.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.hpp
prj.test/: CMakeLists.txt  build.sh  rational_doctest.cpp
